# parlor

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.c  parlor.desktop
icons/: README.txt
